Fixed nearly-unreadable text in tags on light themes.

--- a/css/common.css
+++ b/css/common.css
@@ -511,7 +511,8 @@ button.expander:hover
 
 .threadTag
 {
-	font-size: .8em;
+	color:white;
+	font-size: 1em;
 	text-shadow: 1px 1px 0px hsla(0, 0%, 0%, .5);
 	padding: 0px 2px;
 	border: 1px dotted hsla(0, 0%, 100%, .75);
